[package]
name = "rsa_public_encrypt_pkcs1"
version = "0.3.0"
authors = ["ice_iix <ice_ix@protonmail.ch>"]
description = "RSA PKCS#1 encryption from ASN.1 DER encoded public key in pure Rust"
license = "ISC"
repository = "https://github.com/iceiix/rsa_public_encrypt_pkcs1"
keywords = ["rsa", "pkcs1", "encryption", "publickey", "asn1"]

[dependencies]
num = "0.4.0"
simple_asn1 = "0.5.0"
rand = "0.8.0"
